k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubenexus
  labels:
    name: kubenexus
    app: kubenexus-platform
